// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing PostFooter Component contains page change callback 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PostFooter
    onPageChangeThunk={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Styled(FooterTab)>
        <Styled(Button)
          onPress={[Function]}
        >
          <Styled(Icon)
            name="arrow-left"
            type="MaterialCommunityIcons"
          />
        </Styled(Button)>
        <Styled(Button)>
          <Styled(Icon)
            name="share-variant"
            type="MaterialCommunityIcons"
          />
        </Styled(Button)>
        <Styled(Button)>
          <Styled(Icon)
            name="comment-text"
            type="MaterialCommunityIcons"
          />
        </Styled(Button)>
        <Styled(Button)
          onPress={[Function]}
        >
          <Styled(Icon)
            name="arrow-right"
            type="MaterialCommunityIcons"
          />
        </Styled(Button)>
      </Styled(FooterTab)>,
      "virtual": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(Button)
            onPress={[Function]}
          >
            <Styled(Icon)
              name="arrow-left"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>,
          <Styled(Button)>
            <Styled(Icon)
              name="share-variant"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>,
          <Styled(Button)>
            <Styled(Icon)
              name="comment-text"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>,
          <Styled(Button)
            onPress={[Function]}
          >
            <Styled(Icon)
              name="arrow-right"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>,
        ],
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Styled(Icon)
              name="arrow-left"
              type="MaterialCommunityIcons"
            />,
            "disabled": undefined,
            "onPress": [Function],
            "transparent": undefined,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "arrow-left",
              "type": "MaterialCommunityIcons",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Styled(Icon)
              name="share-variant"
              type="MaterialCommunityIcons"
            />,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "share-variant",
              "type": "MaterialCommunityIcons",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Styled(Icon)
              name="comment-text"
              type="MaterialCommunityIcons"
            />,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "comment-text",
              "type": "MaterialCommunityIcons",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Styled(Icon)
              name="arrow-right"
              type="MaterialCommunityIcons"
            />,
            "disabled": undefined,
            "onPress": [Function],
            "transparent": undefined,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "arrow-right",
              "type": "MaterialCommunityIcons",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Styled(FooterTab)>
          <Styled(Button)
            onPress={[Function]}
          >
            <Styled(Icon)
              name="arrow-left"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>
          <Styled(Button)>
            <Styled(Icon)
              name="share-variant"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>
          <Styled(Button)>
            <Styled(Icon)
              name="comment-text"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>
          <Styled(Button)
            onPress={[Function]}
          >
            <Styled(Icon)
              name="arrow-right"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>
        </Styled(FooterTab)>,
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="arrow-left"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>,
            <Styled(Button)>
              <Styled(Icon)
                name="share-variant"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>,
            <Styled(Button)>
              <Styled(Icon)
                name="comment-text"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>,
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="arrow-right"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>,
          ],
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="arrow-left"
                type="MaterialCommunityIcons"
              />,
              "disabled": undefined,
              "onPress": [Function],
              "transparent": undefined,
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "arrow-left",
                "type": "MaterialCommunityIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="share-variant"
                type="MaterialCommunityIcons"
              />,
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "share-variant",
                "type": "MaterialCommunityIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="comment-text"
                type="MaterialCommunityIcons"
              />,
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "comment-text",
                "type": "MaterialCommunityIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="arrow-right"
                type="MaterialCommunityIcons"
              />,
              "disabled": undefined,
              "onPress": [Function],
              "transparent": undefined,
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "arrow-right",
                "type": "MaterialCommunityIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Testing PostFooter Component is in first page 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PostFooter
    firstPage={true}
    onPageChangeThunk={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Styled(FooterTab)>
        <Styled(Button)
          disabled={true}
          onPress={null}
          transparent={true}
        >
          <Styled(Icon)
            name="arrow-left"
            type="MaterialCommunityIcons"
          />
        </Styled(Button)>
        <Styled(Button)>
          <Styled(Icon)
            name="share-variant"
            type="MaterialCommunityIcons"
          />
        </Styled(Button)>
        <Styled(Button)>
          <Styled(Icon)
            name="comment-text"
            type="MaterialCommunityIcons"
          />
        </Styled(Button)>
        <Styled(Button)
          onPress={null}
        >
          <Styled(Icon)
            name="arrow-right"
            type="MaterialCommunityIcons"
          />
        </Styled(Button)>
      </Styled(FooterTab)>,
      "virtual": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(Button)
            disabled={true}
            onPress={null}
            transparent={true}
          >
            <Styled(Icon)
              name="arrow-left"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>,
          <Styled(Button)>
            <Styled(Icon)
              name="share-variant"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>,
          <Styled(Button)>
            <Styled(Icon)
              name="comment-text"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>,
          <Styled(Button)
            onPress={null}
          >
            <Styled(Icon)
              name="arrow-right"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>,
        ],
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Styled(Icon)
              name="arrow-left"
              type="MaterialCommunityIcons"
            />,
            "disabled": true,
            "onPress": null,
            "transparent": true,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "arrow-left",
              "type": "MaterialCommunityIcons",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Styled(Icon)
              name="share-variant"
              type="MaterialCommunityIcons"
            />,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "share-variant",
              "type": "MaterialCommunityIcons",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Styled(Icon)
              name="comment-text"
              type="MaterialCommunityIcons"
            />,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "comment-text",
              "type": "MaterialCommunityIcons",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Styled(Icon)
              name="arrow-right"
              type="MaterialCommunityIcons"
            />,
            "disabled": undefined,
            "onPress": null,
            "transparent": undefined,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "arrow-right",
              "type": "MaterialCommunityIcons",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Styled(FooterTab)>
          <Styled(Button)
            disabled={true}
            onPress={null}
            transparent={true}
          >
            <Styled(Icon)
              name="arrow-left"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>
          <Styled(Button)>
            <Styled(Icon)
              name="share-variant"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>
          <Styled(Button)>
            <Styled(Icon)
              name="comment-text"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>
          <Styled(Button)
            onPress={null}
          >
            <Styled(Icon)
              name="arrow-right"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>
        </Styled(FooterTab)>,
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Styled(Button)
              disabled={true}
              onPress={null}
              transparent={true}
            >
              <Styled(Icon)
                name="arrow-left"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>,
            <Styled(Button)>
              <Styled(Icon)
                name="share-variant"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>,
            <Styled(Button)>
              <Styled(Icon)
                name="comment-text"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>,
            <Styled(Button)
              onPress={null}
            >
              <Styled(Icon)
                name="arrow-right"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>,
          ],
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="arrow-left"
                type="MaterialCommunityIcons"
              />,
              "disabled": true,
              "onPress": null,
              "transparent": true,
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "arrow-left",
                "type": "MaterialCommunityIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="share-variant"
                type="MaterialCommunityIcons"
              />,
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "share-variant",
                "type": "MaterialCommunityIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="comment-text"
                type="MaterialCommunityIcons"
              />,
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "comment-text",
                "type": "MaterialCommunityIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="arrow-right"
                type="MaterialCommunityIcons"
              />,
              "disabled": undefined,
              "onPress": null,
              "transparent": undefined,
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "arrow-right",
                "type": "MaterialCommunityIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Testing PostFooter Component is in last page 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PostFooter
    lastPage={true}
    onPageChangeThunk={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Styled(FooterTab)>
        <Styled(Button)
          onPress={null}
        >
          <Styled(Icon)
            name="arrow-left"
            type="MaterialCommunityIcons"
          />
        </Styled(Button)>
        <Styled(Button)>
          <Styled(Icon)
            name="share-variant"
            type="MaterialCommunityIcons"
          />
        </Styled(Button)>
        <Styled(Button)>
          <Styled(Icon)
            name="comment-text"
            type="MaterialCommunityIcons"
          />
        </Styled(Button)>
        <Styled(Button)
          disabled={true}
          onPress={null}
          transparent={true}
        >
          <Styled(Icon)
            name="arrow-right"
            type="MaterialCommunityIcons"
          />
        </Styled(Button)>
      </Styled(FooterTab)>,
      "virtual": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(Button)
            onPress={null}
          >
            <Styled(Icon)
              name="arrow-left"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>,
          <Styled(Button)>
            <Styled(Icon)
              name="share-variant"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>,
          <Styled(Button)>
            <Styled(Icon)
              name="comment-text"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>,
          <Styled(Button)
            disabled={true}
            onPress={null}
            transparent={true}
          >
            <Styled(Icon)
              name="arrow-right"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>,
        ],
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Styled(Icon)
              name="arrow-left"
              type="MaterialCommunityIcons"
            />,
            "disabled": undefined,
            "onPress": null,
            "transparent": undefined,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "arrow-left",
              "type": "MaterialCommunityIcons",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Styled(Icon)
              name="share-variant"
              type="MaterialCommunityIcons"
            />,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "share-variant",
              "type": "MaterialCommunityIcons",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Styled(Icon)
              name="comment-text"
              type="MaterialCommunityIcons"
            />,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "comment-text",
              "type": "MaterialCommunityIcons",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Styled(Icon)
              name="arrow-right"
              type="MaterialCommunityIcons"
            />,
            "disabled": true,
            "onPress": null,
            "transparent": true,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "arrow-right",
              "type": "MaterialCommunityIcons",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Styled(FooterTab)>
          <Styled(Button)
            onPress={null}
          >
            <Styled(Icon)
              name="arrow-left"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>
          <Styled(Button)>
            <Styled(Icon)
              name="share-variant"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>
          <Styled(Button)>
            <Styled(Icon)
              name="comment-text"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>
          <Styled(Button)
            disabled={true}
            onPress={null}
            transparent={true}
          >
            <Styled(Icon)
              name="arrow-right"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>
        </Styled(FooterTab)>,
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Styled(Button)
              onPress={null}
            >
              <Styled(Icon)
                name="arrow-left"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>,
            <Styled(Button)>
              <Styled(Icon)
                name="share-variant"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>,
            <Styled(Button)>
              <Styled(Icon)
                name="comment-text"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>,
            <Styled(Button)
              disabled={true}
              onPress={null}
              transparent={true}
            >
              <Styled(Icon)
                name="arrow-right"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>,
          ],
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="arrow-left"
                type="MaterialCommunityIcons"
              />,
              "disabled": undefined,
              "onPress": null,
              "transparent": undefined,
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "arrow-left",
                "type": "MaterialCommunityIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="share-variant"
                type="MaterialCommunityIcons"
              />,
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "share-variant",
                "type": "MaterialCommunityIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="comment-text"
                type="MaterialCommunityIcons"
              />,
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "comment-text",
                "type": "MaterialCommunityIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="arrow-right"
                type="MaterialCommunityIcons"
              />,
              "disabled": true,
              "onPress": null,
              "transparent": true,
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "arrow-right",
                "type": "MaterialCommunityIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Testing PostFooter Component renders as expected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PostFooter
    onPageChangeThunk={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Styled(FooterTab)>
        <Styled(Button)
          onPress={null}
        >
          <Styled(Icon)
            name="arrow-left"
            type="MaterialCommunityIcons"
          />
        </Styled(Button)>
        <Styled(Button)>
          <Styled(Icon)
            name="share-variant"
            type="MaterialCommunityIcons"
          />
        </Styled(Button)>
        <Styled(Button)>
          <Styled(Icon)
            name="comment-text"
            type="MaterialCommunityIcons"
          />
        </Styled(Button)>
        <Styled(Button)
          onPress={null}
        >
          <Styled(Icon)
            name="arrow-right"
            type="MaterialCommunityIcons"
          />
        </Styled(Button)>
      </Styled(FooterTab)>,
      "virtual": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(Button)
            onPress={null}
          >
            <Styled(Icon)
              name="arrow-left"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>,
          <Styled(Button)>
            <Styled(Icon)
              name="share-variant"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>,
          <Styled(Button)>
            <Styled(Icon)
              name="comment-text"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>,
          <Styled(Button)
            onPress={null}
          >
            <Styled(Icon)
              name="arrow-right"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>,
        ],
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Styled(Icon)
              name="arrow-left"
              type="MaterialCommunityIcons"
            />,
            "disabled": undefined,
            "onPress": null,
            "transparent": undefined,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "arrow-left",
              "type": "MaterialCommunityIcons",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Styled(Icon)
              name="share-variant"
              type="MaterialCommunityIcons"
            />,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "share-variant",
              "type": "MaterialCommunityIcons",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Styled(Icon)
              name="comment-text"
              type="MaterialCommunityIcons"
            />,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "comment-text",
              "type": "MaterialCommunityIcons",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Styled(Icon)
              name="arrow-right"
              type="MaterialCommunityIcons"
            />,
            "disabled": undefined,
            "onPress": null,
            "transparent": undefined,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "arrow-right",
              "type": "MaterialCommunityIcons",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Styled(FooterTab)>
          <Styled(Button)
            onPress={null}
          >
            <Styled(Icon)
              name="arrow-left"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>
          <Styled(Button)>
            <Styled(Icon)
              name="share-variant"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>
          <Styled(Button)>
            <Styled(Icon)
              name="comment-text"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>
          <Styled(Button)
            onPress={null}
          >
            <Styled(Icon)
              name="arrow-right"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>
        </Styled(FooterTab)>,
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Styled(Button)
              onPress={null}
            >
              <Styled(Icon)
                name="arrow-left"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>,
            <Styled(Button)>
              <Styled(Icon)
                name="share-variant"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>,
            <Styled(Button)>
              <Styled(Icon)
                name="comment-text"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>,
            <Styled(Button)
              onPress={null}
            >
              <Styled(Icon)
                name="arrow-right"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>,
          ],
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="arrow-left"
                type="MaterialCommunityIcons"
              />,
              "disabled": undefined,
              "onPress": null,
              "transparent": undefined,
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "arrow-left",
                "type": "MaterialCommunityIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="share-variant"
                type="MaterialCommunityIcons"
              />,
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "share-variant",
                "type": "MaterialCommunityIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="comment-text"
                type="MaterialCommunityIcons"
              />,
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "comment-text",
                "type": "MaterialCommunityIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="arrow-right"
                type="MaterialCommunityIcons"
              />,
              "disabled": undefined,
              "onPress": null,
              "transparent": undefined,
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "arrow-right",
                "type": "MaterialCommunityIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
